<resources>
    <string name="app_name">UI Playground</string>
    <string name="blank" />

    <!-- Buttons -->
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="button_return">Return</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>

    <!-- Game states -->
    <string name="started">Game started.</string>
    <string name="paused">Game paused.</string>
    <string name="stopped">Game stopped.</string>
    <string name="game_over">Game Over</string>

    <!-- Game over -->
    <string name="you_win">You win!</string>
    <string name="you_lost">You lost.</string>
    <string name="player_1_wins">Player 1 wins!</string>
    <string name="player_2_wins">Player 2 wins!</string>
    <string name="draw_details">The game ends in a draw.</string>
    <string name="stalemate_details">The game ends in a stalemate.</string>

    <!-- Controls -->
    <string name="up_arrow">^</string>
    <string name="left_arrow">&lt;</string>
    <string name="rotate">Rotate</string>

    <!-- Main Menu -->
    <string name="coin">About</string>
    <string name="dot">•</string>
    <string name="main_menu_ttt">Tic Tac Toe</string>
    <string name="main_menu_pac">Pac-man</string>
    <string name="main_menu_tetris">Tetris</string>
    <string name="main_menu_pong">Pong</string>
    <string name="main_menu_go">Go (2 Player)</string>
    <string name="main_menu_sudoku">Sudoku</string>
    <string name="main_menu_invaders">Space Invaders</string>
    <string name="main_menu_snakes">Snakes &amp; Ladders</string>
    <string name="main_menu_chess">Chess (2 Player)</string>
    <string name="main_menu_asteroids">Asteroids</string>

    <!-- About Menu -->
    <string name="about_menu_top">Made by PC Chin</string>
    <string name="about_menu_bottom">Version: </string>
    <string name="about_menu_license">License</string>

    <!-- Tic Tac Toe -->
    <string name="ttt_l_button">1 Player</string>
    <string name="ttt_r_button">2 Player</string>

    <!-- Pong -->
    <string name="pong_limit">Number of scores needed to win game</string>

    <!-- Popup strings -->
    <string name="loading_popup_text">Loading…</string>
    <string name="exit_popup_title">Exit</string>
    <string name="exit_popup_message">Exit app?</string>
    <string name="exit_popup_left_button">Cancel</string>
    <string name="exit_popup_right_button">Quit</string>
    <string name="title_activity_chess_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
